# everyday-app-hs

./: README.md  everyday-app-hs.cabal
src/: EverydayAppClient.hs
