name:                everyday-app-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/msrdic/everyday-app-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Mladen Srdic
maintainer:          m.s.qubits@gmail.com
copyright:           2020 Mladen Srdic
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EverydayAppClient
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/msrdic/everyday-app-hs
