name:                everyday-app-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/msrdic/everyday-app-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Mladen Srdic
maintainer:          m.s.qubits@gmail.com
copyright:           2020 Mladen Srdic
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  exposed-modules:     EverydayAppClient
  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Wmissing-export-lists
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , text
                     , configurator
                     , filepath 
                     , lens
                     , aeson
                     , lens-aeson
                     , pretty-simple
                     , vector
                     , data-ordlist
  

source-repository head
  type:     git
  location: https://github.com/msrdic/everyday-app-hs
